fixes code snippt font size on small screens

--- a/styles/markdown.css
+++ b/styles/markdown.css
@@ -11,7 +11,11 @@ pre {
 pre, :not(pre) > code {
   background: white;
   border: 1px solid var(--surface-2);
-  font-size: var(--font-size-3);
+  font-size: var(--font-size-2);
+
+  @media (--lg-n-above) {
+    font-size: var(--font-size-3);
+  }
 
   @media (--OSdark) {
     background: var(--gray-11);
